# iskra

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  environment-dev.yaml  environment.yaml  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: deploy.yml  test.yml
csrc/: io.cpp
csrc/ext/rapidobj/: rapidobj.hpp
docs/: about.md  index.md
docs/learn/: index.md
docs/reference/: directional.md  geometry.md  index.md  operators.md  sparse.md  topology.md
docs/stylesheets/: extra.css
docs/templates/python/material/: function.html.jinja
iskra/: __init__.py  _adjoint_debug_helpers.py  adjoint.py  cotan_laplacian.py  dec.py  directional.py  fem.py  grad.py  harmonic_embedding.py  mesh.py  mlp.py  mollifiers.py  profiling.py  random.py  signed_svd.py  skinning.py  sparse.py  sparse_linalg.py  topology.py  types.py  upsample.py
iskra/apps/: arap.py  directional.py  eigen_demo.py  geodesics.py  inflate.py  inverse_arap.py  inverse_arap_mocap.py  inverse_geodesics.py  inverse_scp.py  picker.py  scp.py  skinning_grads.py  slim.py
iskra/apps/comparisons/: arap.py  eigen_demo.py  environment-comp.yaml  inflate.py  inflate_all.py  inflate_analytics.py  neural_param.py  plot_terrain_height.py  terrain.py
iskra/deformation/: __init__.py  arap.py
iskra/geometry/: __init__.py  barycentric.py  bbox.py  broadcast.py  coordinate_system.py  cotan_weights.py  distances.py  dual_quaternions.py  element_quality.py  extrude_boundary.py  normals.py  quaternions.py  volume.py
iskra/io/: __init__.py  io.py
iskra/logging/: __init__.py  logging.py
iskra/operators/: __init__.py  dec.py  mass.py
tests/: template.py  test_adjoint.py  test_dec.py  test_directional.py  test_distances.py  test_grad.py  test_io.py  test_laplacian.py  test_normals.py  test_signed_svd.py  test_sparse.py  test_topology.py  test_types.py  test_volume.py
