[project]
name = "iskra"
version = "0.0.1"
description = "Iskra: Tensor Geometry Processing Library."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ana Dodik", email = "anadodik@mit.edu" },
]
classifiers = [
    "License :: MIT",
]

[project.urls]
Homepage = "https://github.com/anadodik/iskra"

#[build-system]
#requires = ["scikit-build-core >=0.9.4", "nanobind >=1.3.2"]
#build-backend = "scikit_build_core.build"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["iskra"]

#[tool.scikit-build]
#minimum-version = "0.4"
## wheel.packages = ["iskra", "iskra/mesh"]
#wheel.py-api = "cp312"
#build-dir = "build/{wheel_tag}"
#cmake.verbose = true
#cmake.build-type = "Release"
#
#[tool.scikit-build.cmake.define]
#CMAKE_CUDA_ARCHITECTURES = "89"

[tool.black]
line-length = 88

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "D", "N", "I", "PTH", "RSE", "RUF"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = ["F401", "F841", "F842"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Avoid automatically removing unused imports in __init__.py 
ignore-init-module-imports = true

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA -s"
testpaths = ["tests/"]
python_classes = "Test* *Test"
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
